--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,22 @@
-cmake_minimum_required(VERSION 3.15)
+cmake_policy(SET CMP0048 NEW)
+
+project(Voxel
+    #VERSION 0.0
+    #DESCRIPTION "Voxel Engine"
+    #LANGUAGES CXX
+)
+
+
+cmake_minimum_required(VERSION 3.16)
 
 # Set all libs to be static
 option(BUILD_SHARED_LIBS OFF)
 
 # Vulkan
-find_package(Vulkan)
+find_package(Vulkan REQUIRED FATAL_ERROR)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-project(Voxel
-    VERSION 0.0
-    DESCRIPTION "Voxel Engine"
-    LANGUAGES CXX
-)
 
 file(TO_CMAKE_PATH "${PROJECT_BINARY_DIR}/CMakeLists.txt" LOC_PATH)
 if (EXISTS "${LOC_PATH}")
