Integrate spdlog into cmake and as core module

--- a/engine/core/CMakeLists.txt
+++ b/engine/core/CMakeLists.txt
@@ -7,11 +7,13 @@ target_include_directories(
 set(CORE_HEADERS
     include/core/application.hpp
     include/core/window.hpp
+    include/core/log.hpp
 )
 
 set(CORE_SRC
     src/application.cpp
     src/window.cpp
+    src/log.cpp
 )
 
 target_sources(
